--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Github Repo</title>
 </head>
 <body>
-    
+        <h2>i can push to Github</h2>
+        <h2>i want to eat burger</h2>
+        <h2>i want to meet sabrina</h2>
 </body>
 </html>
