--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <h2>i can push to Github</h2>
         <h2>i want to eat burger</h2>
         <h2>i want to meet sabrina</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptatibus excepturi culpa necessitatibus mollitia deserunt earum ad. Dignissimos expedita accusamus id reprehenderit at enim, consectetur porro, veniam, laboriosam sunt corrupti.
+        Fugit repellat corrupti, minima ut, pariatur optio commodi cupiditate eum quam architecto obcaecati quaerat autem similique, atque animi eos facere temporibus mollitia deleniti officiis odio possimus nam sunt? Error, quisquam.</p>
 </body>
 </html>
