--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <h2>i want to meet sabrina</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptatibus excepturi culpa necessitatibus mollitia deserunt earum ad. Dignissimos expedita accusamus id reprehenderit at enim, consectetur porro, veniam, laboriosam sunt corrupti.
         Fugit repellat corrupti, minima ut, pariatur optio commodi cupiditate eum quam architecto obcaecati quaerat autem similique, atque animi eos facere temporibus mollitia deleniti officiis odio possimus nam sunt? Error, quisquam.</p>
+        <img src="joker.jpg" alt="">
+        <img src="thumb-1920-959311.jpg" alt="">
 </body>
 </html>
